# fast-pass

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: publish.yml  test.yml
src/fast_pass/: cli.py  core.py
src/fast_password/: __init__.py
tests/: test_core.py
